# pytorch_yt

./: .gitignore  00_pytorch_fundamentals.ipynb  01_pytorch_workflow.ipynb  02_pytorch_classification.ipynb  03_pytorch_computer_vision.ipynb  04_pytorch_custom_datasets.ipynb  05_pytorch_going_modular.ipynb  06_pytorch_transfer_learning.ipynb  07_pytorch_experiment_tracking.ipynb  README.md  hello.py  pyproject.toml
going_modular/: engine.py
